DOCS-1392: fix footer z-index Bring footer aboved other page elements

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -261,10 +261,11 @@ nav a {
   }
 }
 
-// footer color
+// Bring footer to front and recolor
 
 .footer-darkblue {
   background-color: #00597F;
+  z-index: 1;
 }
 
 // hardware grid for TrueNAS WhatIs article
